--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Lenin Mombe - Personal Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Add this line -->
+    <title>Your Full Name - Personal Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="works_on_smartphone"> <!-- Add class here -->
     <header>
-        <h1>Lenin Mombe</h1>
-        <p>Aspiring Front-End Developer</p>
+        <h1>Your Name</h1>
+        <p>Your tagline or professional statement.</p>
     </header>
     <nav>
         <ul>
@@ -17,36 +19,18 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-    <section id="introduction">
-        <h2>Introduction</h2>
-        <p>Hello! I am Lenin, an aspiring front-end developer with a passion for creating beautiful and functional websites.</p>
-    </section>
-    <section id="projects">
-        <h2>Projects</h2>
-        <article class="project">
-            <h3>Project Title 1</h3>
-            <p>Description of Project 1.</p>
-            <a href="https://link-to-your-project-1.com" target="_blank">View Project</a>
+    <main>
+        <article>
+            <h2>Introduction</h2>
+            <p>Your introduction content.</p>
         </article>
-        <article class="project">
-            <h3>Project Title 2</h3>
-            <p>Description of Project 2.</p>
-            <a href="https://link-to-your-project-2.com" target="_blank">View Project</a>
-        </article>
-        <!-- Add more projects as needed -->
-    </section>
-    <section id="about">
-        <h2>About Me</h2>
-        <p>I have a background in networking and a passion for web development. In my free time, I enjoy learning new technologies and improving my skills.</p>
-        <!-- You can add more details about your skills or hobbies here -->
-    </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>You can reach me via email at <a href="mailto:mombelenin25@gmail.com">mombelenin25@gmail.com</a>.</p>
-        <p>Connect with me on <a href="https://linkedin.com/in/your-linkedin" target="_blank">LinkedIn</a> and <a href="https://github.com/lenmorereal" target="_blank">GitHub</a>.</p>
-    </section>
+        <aside>
+            <h2>Sidebar Content</h2>
+            <p>Your sidebar content.</p>
+        </aside>
+    </main>
     <footer>
-        <p>&copy; 2024 Lenin Mombe</p>
+        <p>&copy; 2024 Your Name</p>
     </footer>
 </body>
 </html>
