Add header and banner styles based on Figma design

--- a/portfolio/css_advanced/css_advanced/index.html
+++ b/portfolio/css_advanced/css_advanced/index.html
@@ -9,8 +9,12 @@
 <body>
     <header>
         <h1>Your Website Title</h1>
-        <!-- Add more header content here -->
+        <!-- Additional header content (e.g., navigation) can go here -->
     </header>
+
+    <section class="banner">
+        <h2>Welcome to My Website</h2>
+    </section>
 
     <main>
         <!-- Main content goes here -->
@@ -23,3 +27,4 @@
     </footer>
 </body>
 </html>
+
