Add styling for quote section based on Figma design

--- a/portfolio/css_advanced/css_advanced/index.html
+++ b/portfolio/css_advanced/css_advanced/index.html
@@ -15,7 +15,11 @@
     <section class="banner">
         <h2>Welcome to My Website</h2>
     </section>
-
+    <section class="quote">
+        <p>"The only limit to our realization of tomorrow is our doubts of today."</p>
+        <p class="quote-author">— Franklin D. Roosevelt</p>
+    </section>
+    
     <main>
         <!-- Main content goes here -->
     </main>
