Add styling for membership, FAQ, and footer sections based on Figma design

--- a/portfolio/css_advanced/css_advanced/index.html
+++ b/portfolio/css_advanced/css_advanced/index.html
@@ -31,4 +31,49 @@
     </footer>
 </body>
 </html>
+<!-- Membership Section -->
+<section class="membership-section">
+    <h2>Membership Options</h2>
+    <div class="membership-options">
+        <div class="membership-option">
+            <h3>Basic Membership</h3>
+            <p>Access to basic features and benefits.</p>
+            <button>Join Now</button>
+        </div>
+        <div class="membership-option">
+            <h3>Premium Membership</h3>
+            <p>Access to all features, including premium benefits.</p>
+            <button>Join Now</button>
+        </div>
+        <div class="membership-option">
+            <h3>VIP Membership</h3>
+            <p>Exclusive access to VIP features and support.</p>
+            <button>Join Now</button>
+        </div>
+    </div>
+</section>
+
+<!-- FAQ Section -->
+<section class="faq-section">
+    <h2>Frequently Asked Questions</h2>
+    <div class="faq-item">
+        <h3>What is the membership duration?</h3>
+        <p>The membership is valid for one year from the date of purchase.</p>
+    </div>
+    <div class="faq-item">
+        <h3>Can I cancel my membership?</h3>
+        <p>Yes, you can cancel your membership at any time.</p>
+    </div>
+    <div class="faq-item">
+        <h3>Is there a money-back guarantee?</h3>
+        <p>Yes, we offer a 30-day money-back guarantee.</p>
+    </div>
+</section>
+
+<!-- Footer Section -->
+<footer>
+    <p>&copy; 2024 Your Name. All rights reserved.</p>
+    <h3>Contact Me</h3>
+    <p>Email: <a href="mailto:mombelenin25@gmail.com">mombelenin25@gmail.com</a></p>
+</footer>
 
